apps/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-depends-service
  namespace: it-depends
spec:
  selector:
    app: it-depends
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
